Fixed wrapper on .o-overflow

--- a/source/_scss/main.scss
+++ b/source/_scss/main.scss
@@ -199,6 +199,11 @@ $inuit-list-inline-delimiter: "\00A0\00A0\00b7\00A0\00A0";
     @include mq($from: desktop) {
         overflow-x: scroll;
     }
+
+    &--padding {
+        padding-right: $unit;
+        padding-left: $unit;
+    }
 }
 
     .o-overflow__content {
